GNOME Bugzilla – Bug 705885
gnome-xkb-info: Prevent a crash with unknown language/country codes
Last modified: 2013-09-03 23:27:55 UTC
See patch
Created attachment 251448 [details] [review] gnome-xkb-info: Prevent a crash with unknown language/country codes
Review of attachment 251448 [details] [review]: Looks good.
Attachment 251448 [details] pushed as 6c35f0a - gnome-xkb-info: Prevent a crash with unknown language/country codes
Pushed as 3b11ac8 to the 3.8 branch too. Will do a 3.8.4 release at some point. Thanks for the quick review Colin.
Is this released already? I am still getting abrt on F19 and unable to add any ime since last 3 weeks.
At least provide me some alternative solution to add new input methods.
I think bug should not be closed till they gets part of some official release.
*** Bug 707179 has been marked as a duplicate of this bug. ***