gnome-xkb-info: Prevent a crash with unknown language/country codes

https://bugzilla.gnome.org/show_bug.cgi?id=705885